Changed title again and linked the stylesheet

--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Committed new</title>
+    <title>Random Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur minus quaerat suscipit autem eius, quia iure. 
     Illum alias accusantium, blanditiis quisquam, voluptates eum id voluptatibus placeat et doloremque, tempora sapiente?
-<<<<<<< HEAD
     <div>
         <h1>Morororororooro</h1>
         <p>A Paragraph that says something</p>
     </div>
-=======
->>>>>>> parent of 5cd422a... Added h1 inside a div
 </body>
 </html>
