added yet another h1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     Illum alias accusantium, blanditiis quisquam, voluptates eum id voluptatibus placeat et doloremque, tempora sapiente?
     <div>
         <h1>Morororororooro</h1>
+        <h1>Random</h1>
     </div>
 </body>
 </html>
